feitas alterações em modelos legging rasteirinhas e flaire

--- a/modelosflaire.html
+++ b/modelosflaire.html
@@ -47,29 +47,29 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
 								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
-								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -84,29 +84,29 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
 								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
-								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores. </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -121,29 +121,29 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
 								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
-								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -158,29 +158,29 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
 								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
-								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Flaire</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
