--- a/modeloslegging.html
+++ b/modeloslegging.html
@@ -46,10 +46,10 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
-								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<h3>Legging</h3>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -57,19 +57,19 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
 								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Legging</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -83,10 +83,10 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
-								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<h3>Legging</h3>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -94,19 +94,19 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
 								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<p>Tamanhos do P ao GG e opções de cores. </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Legging</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -120,10 +120,10 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
-								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<h3>Legging</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -131,19 +131,19 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
 								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Legging</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -157,10 +157,10 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
-								<h3>Flaire</h3>
-								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
+								<h3>Legging</h3>
+								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="modelos.html" class="button">Modelos</a></li>
+									<li><a href="modelos.html" class=""></a></li>
 								</ul>
 							</article>
 						</div>
@@ -168,19 +168,19 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
 								<h3>Legging</h3>
-								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
+								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
-								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<h3>Legging</h3>
+								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
-									<li><a href="#" class="button">Modelos</a></li>
+									<li><a href="#" class=""></a></li>
 								</ul>
 							</article>
 						</div>
