--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<article class="box post">
 								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="370px" alt="" /></a>
 								<h3>Rasteirinhas</h3>
-								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos pés.</p>
+								<p>As queridinhas... versáteis sandálias e chinelos baixos trazem conforto e beleza aos seus pés.</p>
 								<ul class="actions">
 									<li><a href="modelosras.html" class="button">Modelos</a></li>
 								</ul>
