--- a/modelosras.html
+++ b/modelosras.html
@@ -45,7 +45,7 @@
 <div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/k1.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -55,7 +55,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras1.jpg" width="250px" height="470px"alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -65,7 +65,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras2.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -82,7 +82,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/ras3.jpg" width="250px" height="470px"alt=""/></a>
 								<h3>Rasteirinhas</h3>
 								<p> Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -92,7 +92,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras4.jpg" width="250px" height="470px"alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -102,7 +102,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras5.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -119,7 +119,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/ras6.jpg" width="250px" height="470px"alt=""/></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -129,7 +129,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras7.jpg" width="250px" height="470px"alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39</p>
 								<ul class="actions">
@@ -139,7 +139,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/ras8.jpg" width="250px" height="470px"alt="" /></a>
 								<h3>Rasteirinhas</h3>
 								<p>Tamanhos do 34 ao 39 </p>
 								<ul class="actions">
@@ -156,9 +156,9 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
-								<h3>Legging</h3>
-								<p> Tamanhos do P ao GG e opções de cores</p>
+								<a href="#" class="image fit"><img src="img/ras9.jpg" alt=""/></a>
+								<h3>Rasteirinhas</h3>
+								<p> Tamanhos do 34 ao 39 </p>
 								<ul class="actions">
 									<li><a href="modelos.html" class=""></a></li>
 								</ul>
@@ -166,9 +166,9 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
-								<h3>Legging</h3>
-								<p>Tamanhos do P ao GG e opções de cores </p>
+								<a href="#" class="image fit"><img src="img/ras10.jpg" alt="" /></a>
+								<h3>Rasteirinhas</h3>
+								<p>Tamanhos do 34 ao 39 </p>
 								<ul class="actions">
 									<li><a href="#" class=""></a></li>
 								</ul>
@@ -176,9 +176,9 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
-								<h3>Legging</h3>
-								<p>Tamanhos do P ao GG e opções de cores</p>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="250px" height="470px" alt="" /></a>
+								<h3>Rasteirinhas</h3>
+								<p>Tamanhos do 34 ao 39 </p>
 								<ul class="actions">
 									<li><a href="#" class=""></a></li>
 								</ul>
