--- a/modeloslegging.html
+++ b/modeloslegging.html
@@ -45,7 +45,7 @@
 <div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/leg12.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -55,7 +55,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/lrg1.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
@@ -65,7 +65,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg2.jpg" width="250px" height="470px" width="300px" height="500px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -82,7 +82,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/leg3.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -92,7 +92,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg4.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores. </p>
 								<ul class="actions">
@@ -102,7 +102,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg5.jpg" width="250px" height="470px" width="300px" height="500px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -119,7 +119,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/leg6.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -129,7 +129,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg7.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
@@ -139,7 +139,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg8.jpg" width="250px" height="470px" width="300px" height="500px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -156,7 +156,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k1.jpg" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/leg6.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -166,7 +166,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg14.jpg" width="250px" height="470px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores </p>
 								<ul class="actions">
@@ -176,7 +176,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/leg13.jpg" width="250px" height="470px" width="300px" height="500px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
