inclusão imagens legging

--- a/modeloslegging.html
+++ b/modeloslegging.html
@@ -45,7 +45,7 @@
 <div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/leg12.jpg" width="250px" height="470px" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/lg01.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
@@ -156,7 +156,7 @@
 			<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/leg6.jpg" width="250px" height="470px" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/lg.jpg" width="250px" height="470px" alt=""/></a>
 								<h3>Legging</h3>
 								<p> Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
