--- a/modelosflaire.html
+++ b/modelosflaire.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/lg01.jpg" width="300px" height="500px" alt="" /></a>
 								<h3>Flaire</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
