--- a/modelosflaire.html
+++ b/modelosflaire.html
@@ -18,7 +18,7 @@
 
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
-		
+		    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha256-NuCn4IvuZXdBaFKJOAcsU2Q3ZpwbdFisd5dux4jkQ5w=" crossorigin="anonymous" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
@@ -65,7 +65,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/lg01.jpg" width="300px" height="500px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/k5.jpg" width="300px" height="500px" alt="" /></a>
 								<h3>Flaire</h3>
 								<p>Tamanhos do P ao GG e opções de cores</p>
 								<ul class="actions">
