--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script src="js/init.js"></script>
 
 			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
+			
 		    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha256-NuCn4IvuZXdBaFKJOAcsU2Q3ZpwbdFisd5dux4jkQ5w=" crossorigin="anonymous" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
@@ -67,6 +67,7 @@
 								</div>
 							</div>
 						</div>
+						<span class="nav-previous"></span>
 						<span class="nav-next"></span>
 					</div>
 				</div>
