--- a/index.html
+++ b/index.html
@@ -57,13 +57,22 @@
 									<img src="img/k.jpg" alt="" />
 								</div>
 								<div class="slide">
-									<img src="img/k1.jpg" alt="" />
+									<img src="img/f34.jpg" alt="" />
 								</div>
 								<div class="slide">
-									<img src="img/k2.jpg" alt="" />
+									<img src="img/f37.jpg" alt="" />
 								</div>
 								<div class="slide">
-									<img src="img/k3.jpg" alt="" />
+									<img src="img/f39.jpg" alt="" />
+								</div>
+								<div class="slide">
+									<img src="img/f48.jpg" alt="" />
+								</div>
+								<div class="slide">
+									<img src="img/f49.jpg" alt="" />
+								</div>
+								<div class="slide">
+									<img src="img/f44.jpg" alt="" />
 								</div>
 							</div>
 						</div>
